Make ignited_cells a set to eliminate duplicate spot ignitions for the same cell

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6542,7 +6542,7 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
                         (ignition_time, ignited_cells) = new_ignitions
                         concurrent_ignited_cells       = spot_ignitions.get(ignition_time)
                         if concurrent_ignited_cells:
-                            spot_ignitions[ignition_time] = concurrent_ignited_cells + ignited_cells
+                            spot_ignitions[ignition_time] = set.union(ignited_cells, concurrent_ignited_cells)
                         else:
                             spot_ignitions[ignition_time] = ignited_cells
 
@@ -7237,41 +7237,41 @@ Firebrand Count (number of firebrands)
 Total Firebrands on Grid: 743
 
 Future Spot Ignitions:
-{2551.1983484249668: [(78, 75)],
- 2551.4128378868545: [(79, 54), (80, 60)],
- 2551.8570495625095: [(82, 36)],
- 2553.243730269104: [(73, 50)],
- 2553.5035515580585: [(82, 42)],
- 2553.670852433065: [(88, 50)],
- 2554.838036745546: [(78, 64)],
- 2555.5255703556245: [(78, 60), (78, 58)],
- 2556.281415042003: [(80, 74)],
- 2556.957528510658: [(78, 75), (79, 80)],
- 2557.1965199840843: [(75, 51), (72, 52)],
- 2560.051807503919: [(82, 76)],
- 2560.0549510644096: [(75, 81)],
- 2562.2247250858395: [(78, 53)],
- 2563.0142549445554: [(60, 78)],
- 2563.8632085416048: [(81, 38)],
- 2566.6677219767957: [(82, 40)],
- 2567.2130485511593: [(78, 77)],
- 2567.3587371828735: [(83, 69)],
- 2569.3315993024007: [(79, 77)],
- 2570.9222418350946: [(83, 36), (83, 43)],
- 2573.732535115886: [(92, 51)],
- 2574.6585753861295: [(53, 44)],
- 2574.7944549624035: [(85, 72)],
- 2575.8510325678994: [(80, 63), (81, 65)],
- 2576.9250318582476: [(90, 38)],
- 2576.970254288768: [(78, 60), (80, 63)],
- 2581.2576899614737: [(73, 78)],
- 2583.255882787028: [(84, 31)],
- 2583.532753380975: [(84, 54)],
- 2583.757556126505: [(70, 84)],
- 2591.9153606730115: [(66, 34), (71, 40)],
- 2592.88477227848: [(64, 36)],
- 2603.1104028205696: [(80, 55)],
- 2613.442298175292: [(61, 37)]}
+{2551.1983484249668: {(78, 75)},
+ 2551.4128378868545: {(79, 54), (80, 60)},
+ 2551.8570495625095: {(82, 36)},
+ 2553.243730269104: {(73, 50)},
+ 2553.5035515580585: {(82, 42)},
+ 2553.670852433065: {(88, 50)},
+ 2554.838036745546: {(78, 64)},
+ 2555.5255703556245: {(78, 60), (78, 58)},
+ 2556.281415042003: {(80, 74)},
+ 2556.957528510658: {(79, 80), (78, 75)},
+ 2557.1965199840843: {(72, 52), (75, 51)},
+ 2560.051807503919: {(82, 76)},
+ 2560.0549510644096: {(75, 81)},
+ 2562.2247250858395: {(78, 53)},
+ 2563.0142549445554: {(60, 78)},
+ 2563.8632085416048: {(81, 38)},
+ 2566.6677219767957: {(82, 40)},
+ 2567.2130485511593: {(78, 77)},
+ 2567.3587371828735: {(83, 69)},
+ 2569.3315993024007: {(79, 77)},
+ 2570.9222418350946: {(83, 43), (83, 36)},
+ 2573.732535115886: {(92, 51)},
+ 2574.6585753861295: {(53, 44)},
+ 2574.7944549624035: {(85, 72)},
+ 2575.8510325678994: {(81, 65), (80, 63)},
+ 2576.9250318582476: {(90, 38)},
+ 2576.970254288768: {(78, 60), (80, 63)},
+ 2581.2576899614737: {(73, 78)},
+ 2583.255882787028: {(84, 31)},
+ 2583.532753380975: {(84, 54)},
+ 2583.757556126505: {(70, 84)},
+ 2591.9153606730115: {(66, 34), (71, 40)},
+ 2592.88477227848: {(64, 36)},
+ 2603.1104028205696: {(80, 55)},
+ 2613.442298175292: {(61, 37)}}
 #+end_example
 
 **** Create Images of the Output Matrices with Spotting Enabled
@@ -8309,7 +8309,7 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
     a tuple with these fields:
 
     - ignition_time :: minutes
-    - ignited_cells :: list of (y,x) grid coordinates
+    - ignited_cells :: set of (y,x) grid coordinates
     """
     #=======================================================================================
     # Sample the number of firebrands to cast from the source cell
@@ -8347,7 +8347,7 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
         # Cast each firebrand, update firebrand_count_matrix, and accumulate any ignited cells
         #=======================================================================================
 
-        ignited_cells = [ignited_cell for _i in range(num_firebrands)
+        ignited_cells = {ignited_cell for _i in range(num_firebrands)
                          if (ignited_cell := cast_firebrand(rand_gen,
                                                             fuel_model_cube,
                                                             temperature_cube,
@@ -8366,7 +8366,7 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
                                                             sin_wdir,
                                                             sample_delta_y_fn,
                                                             sample_delta_x_fn))
-                         is not None]
+                         is not None}
 
         #=======================================================================================
         # Return any cells ignited by firebrands along with their time of ignition
