--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6385,7 +6385,7 @@ def spread_direction_vector_to_angle(vector_3d):
 def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, tracked_cells,
                              cube_resolution, start_time, max_timestep, use_wind_limit=True,
                              max_length_to_width_ratio=None, max_cells_per_timestep=0.4, buffer_width=3,
-                             spot_ignitions={}, spotting_config=None, rand_gen=None):
+                             spot_ignitions={}, spot_config=None, rand_gen=None):
     """
     TODO: Add docstring
     NOTE:
@@ -6413,8 +6413,8 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
     flame_length_matrix       = output_matrices["flame_length"]
     time_of_arrival_matrix    = output_matrices["time_of_arrival"]
 
-    # Extract the ember_production_rate from the spotting_config if provided
-    ember_production_rate = spotting_config["ember_production_rate"] if spotting_config else None
+    # Extract the ember_production_rate from the spot_config if provided
+    ember_production_rate = spot_config["ember_production_rate"] if spot_config else None
 
     # Initialize max spread rates in the x and y dimensions to 0.0
     max_spread_rate_x = 0.0
@@ -6525,7 +6525,7 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
                 time_of_arrival_matrix[y,x]    = start_time + dt * phi / (phi - phi_next)
 
                 # Cast firebrands, update firebrand_count_matrix, and update spot_ignitions
-                if spotting_config:
+                if spot_config:
                     t_cast                = int(time_of_arrival_matrix[y,x] // band_duration)
                     space_time_coordinate = (t_cast, y, x)
                     slope                 = slope_cube.get(t_cast, y, x)
@@ -6537,7 +6537,7 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
                                                                       ember_production_rate)
                     new_ignitions         = spread_firebrands(space_time_cubes, output_matrices, cube_resolution,
                                                               space_time_coordinate, rand_gen, expected_ember_count,
-                                                              spotting_config)
+                                                              spot_config)
                     if new_ignitions:
                         (ignition_time, ignited_cells) = new_ignitions
                         concurrent_ignited_cells       = spot_ignitions.get(ignition_time)
@@ -6579,7 +6579,7 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
 
 def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolution, start_time,
                                max_duration=None, use_wind_limit=True, max_length_to_width_ratio=None,
-                               max_cells_per_timestep=0.4, buffer_width=3, spot_ignitions={}, spotting_config=None):
+                               max_cells_per_timestep=0.4, buffer_width=3, spot_ignitions={}, spot_config=None):
     """
     Given these inputs:
     - space_time_cubes          :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
@@ -6621,7 +6621,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
     - max_cells_per_timestep    :: max number of cells the fire front can travel in one timestep (Optional)
     - buffer_width              :: Chebyshev distance from frontier cells to include in tracked cells (Optional)
     - spot_ignitions            :: dictionary of (ignition_time -> ignited_cells) (Optional: needed for spotting)
-    - spotting_config           :: dictionary of spotting parameters (Optional: needed for spotting)
+    - spot_config               :: dictionary of spotting parameters (Optional: needed for spotting)
       - random_seed                   :: integer to seed a numpy.random.Generator object
       - ember_production_rate         :: embers/kJ
       - mean_distance                 :: meters
@@ -6679,8 +6679,8 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
     # Make a copy of the phi matrix to use for intermediate calculations in each timestep
     output_matrices["phi_star"] = np.copy(phi_matrix)
 
-    # Create a numpy.random.Generator object to produce random samples if spotting_config is provided
-    rand_gen = np.random.default_rng(seed=spotting_config["random_seed"]) if spotting_config else None
+    # Create a numpy.random.Generator object to produce random samples if spot_config is provided
+    rand_gen = np.random.default_rng(seed=spot_config["random_seed"]) if spot_config else None
 
     # Spread the fire until an exit condition is reached
     # FIXME: I don't think the "no burnable cells" condition can ever be met currently.
@@ -6695,7 +6695,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
         results = spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, tracked_cells,
                                            cube_resolution, simulation_time, max_timestep, use_wind_limit,
                                            max_length_to_width_ratio, max_cells_per_timestep, buffer_width,
-                                           spot_ignitions, spotting_config, rand_gen)
+                                           spot_ignitions, spot_config, rand_gen)
 
         # Reset spread inputs
         simulation_time = results["simulation_time"]
@@ -6712,7 +6712,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
         "stop_time"      : simulation_time,
         "stop_condition" : "max duration reached" if len(tracked_cells) > 0 else "no burnable cells",
         "output_matrices": output_matrices,
-    } | ({"spot_ignitions" : spot_ignitions} if spotting_config else {})
+    } | ({"spot_ignitions" : spot_ignitions} if spot_config else {})
 #+end_src
 
 ** For Users
@@ -7116,7 +7116,7 @@ output_matrices["phi"][50,50] = -1.0
 # Specify the spotting parameters
 #============================================================================================
 
-spotting_config = {
+spot_config = {
     "random_seed"                 : 1234567890,
     "ember_production_rate"       : 1e-6,       # embers/kJ
     "mean_distance"               : 10.0,       # meters
@@ -7133,7 +7133,7 @@ spotting_config = {
 
 fire_spread_results = els.spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolution,
                                                      start_time, max_duration, spot_ignitions={},
-                                                     spotting_config=spotting_config)
+                                                     spot_config=spot_config)
 
 stop_time       = fire_spread_results["stop_time"]              # minutes
 stop_condition  = fire_spread_results["stop_condition"]         # "max duration reached" or "no burnable cells"
@@ -7608,26 +7608,26 @@ the properties of the log-normal distribution:
 from math import log, sqrt
 
 
-def resolve_exp_delta_x(spotting_config, fireline_intensity, wind_speed_20ft):
+def resolve_exp_delta_x(spot_config, fireline_intensity, wind_speed_20ft):
     """
     Computes the expected value E[ΔX] (in meters) of the downwind spotting distance ΔX given:
-    - spotting_config    :: a map of spotting parameters
+    - spot_config        :: a map of spotting parameters
     - fireline_intensity :: kW/m
     - wind_speed_20ft    :: m/s
     """
-    mean_distance = spotting_config["mean_distance"]
-    flin_exp      = spotting_config["flin_exp"]
-    ws_exp        = spotting_config["ws_exp"]
+    mean_distance = spot_config["mean_distance"]
+    flin_exp      = spot_config["flin_exp"]
+    ws_exp        = spot_config["ws_exp"]
     return mean_distance * (fireline_intensity ** flin_exp) * (wind_speed_20ft ** ws_exp)
 
 
-def resolve_var_delta_x(spotting_config, exp_delta_x):
+def resolve_var_delta_x(spot_config, exp_delta_x):
     """
     Computes the variance Var[ΔX] (in m^2) of the downwind spotting distance ΔX given:
-    - spotting_config :: a map of spotting parameters
-    - exp_delta_x     :: meters (E[ΔX])
+    - spot_config :: a map of spotting parameters
+    - exp_delta_x :: meters (E[ΔX])
     """
-    return spotting_config["normalized_distance_variance"] * exp_delta_x
+    return spot_config["normalized_distance_variance"] * exp_delta_x
 
 
 def lognormal_mu_from_moments(mean, variance):
@@ -7645,12 +7645,12 @@ def lognormal_sigma_from_moments(mean, variance):
     return sqrt(log(1.0 + variance / (mean ** 2.0)))
 
 
-def resolve_lognormal_params(spotting_config, fireline_intensity, wind_speed_20ft):
+def resolve_lognormal_params(spot_config, fireline_intensity, wind_speed_20ft):
     """
     TODO: Add docstring
     """
-    exp_delta_x = resolve_exp_delta_x(spotting_config, fireline_intensity, wind_speed_20ft)
-    var_delta_x = resolve_var_delta_x(spotting_config, exp_delta_x)
+    exp_delta_x = resolve_exp_delta_x(spot_config, fireline_intensity, wind_speed_20ft)
+    var_delta_x = resolve_var_delta_x(spot_config, exp_delta_x)
     return {
         "prob.lognormal.mu"   : lognormal_mu_from_moments(exp_delta_x, var_delta_x),
         "prob.lognormal.sigma": lognormal_sigma_from_moments(exp_delta_x, var_delta_x),
@@ -7768,11 +7768,11 @@ def deltax_coefficient_of_variation(sigma_x):
     return sqrt(exp(sigma_x ** 2.0) - 1.0)
 
 
-def delta_x_sampler(spotting_config, fireline_intensity, wind_speed_20ft):
+def delta_x_sampler(spot_config, fireline_intensity, wind_speed_20ft):
     """
     Returns a function for randomly sampling ΔX, the spotting jump along the wind direction (in meters).
     """
-    ln_params = resolve_lognormal_params(spotting_config, fireline_intensity, wind_speed_20ft)
+    ln_params = resolve_lognormal_params(spot_config, fireline_intensity, wind_speed_20ft)
     mu_x      = ln_params["prob.lognormal.mu"]    # meters
     sigma_x   = ln_params["prob.lognormal.sigma"] # meters
     return lambda rand_gen: sample_lognormal(rand_gen, mu_x, sigma_x) # meters
@@ -7794,26 +7794,26 @@ def himoto_resolve_default_sigma_y_from_lognormal_params(mu_x, sigma_x):
     return sigma_y_scalar_m * avg_deltax * (es2h + 1.0) * (es2h - 1.0) # meters
 
 
-def himoto_resolve_default_sigma_y(spotting_config, fireline_intensity, wind_speed_20ft):
-    ln_params = resolve_lognormal_params(spotting_config, fireline_intensity, wind_speed_20ft)
+def himoto_resolve_default_sigma_y(spot_config, fireline_intensity, wind_speed_20ft):
+    ln_params = resolve_lognormal_params(spot_config, fireline_intensity, wind_speed_20ft)
     mu_x      = ln_params["prob.lognormal.mu"]    # meters
     sigma_x   = ln_params["prob.lognormal.sigma"] # meters
     return himoto_resolve_default_sigma_y_from_lognormal_params(mu_x, sigma_x) # meters
 
 
-def resolve_delta_y_sigma(spotting_config, fireline_intensity, wind_speed_20ft):
-    delta_y_sigma = spotting_config.get("delta_y_sigma")
+def resolve_delta_y_sigma(spot_config, fireline_intensity, wind_speed_20ft):
+    delta_y_sigma = spot_config.get("delta_y_sigma")
     if delta_y_sigma != None:
         return delta_y_sigma # meters
     else:
-        return himoto_resolve_default_sigma_y(spotting_config, fireline_intensity, wind_speed_20ft) # meters
+        return himoto_resolve_default_sigma_y(spot_config, fireline_intensity, wind_speed_20ft) # meters
 
 
-def delta_y_sampler(spotting_config, fireline_intensity, wind_speed_20ft):
+def delta_y_sampler(spot_config, fireline_intensity, wind_speed_20ft):
     """
     Returns a function for randomly sampling ΔY, the spotting jump perpendicular to the wind direction (in meters).
     """
-    sigma_y = resolve_delta_y_sigma(spotting_config, fireline_intensity, wind_speed_20ft) # meters
+    sigma_y = resolve_delta_y_sigma(spot_config, fireline_intensity, wind_speed_20ft) # meters
     return lambda rand_gen: sample_normal(rand_gen, 0.0, sigma_y) # meters
 
 
@@ -7825,11 +7825,11 @@ def sample_wind_dir_deltas(inputs, fireline_intensity, wind_speed_20ft, num_fire
     parallel and perpendicular to the wind. ΔX will typically be positive (downwind),
     and positive ΔY means to the right of the downwind direction.
     """
-    spotting_config     = inputs["spotting"]
+    spot_config         = inputs["spotting"]
     rand_gen            = inputs["rand_gen"]
     wind_speed_20ft_mps = conv.km_hr_to_mps(wind_speed_20ft)
-    sample_delta_x_fn   = delta_x_sampler(spotting_config, fireline_intensity, wind_speed_20ft_mps)
-    sample_delta_y_fn   = delta_y_sampler(spotting_config, fireline_intensity, wind_speed_20ft_mps)
+    sample_delta_x_fn   = delta_x_sampler(spot_config, fireline_intensity, wind_speed_20ft_mps)
+    sample_delta_y_fn   = delta_y_sampler(spot_config, fireline_intensity, wind_speed_20ft_mps)
     return [(sample_delta_x_fn(rand_gen), sample_delta_y_fn(rand_gen)) for _i in range(num_firebrands)]
 #+end_src
 
@@ -7879,16 +7879,16 @@ def intranges_mapping_lookup(intranges_mapping, fuel_model_number):
 
 
 def is_surface_spot_fire(inputs, fuel_model_number, fireline_intensity):
-    spotting_config = inputs.get("spotting")
-    if spotting_config:
-        surface_fire_spotting_config = spotting_config.get("surface_fire_spotting")
-        if surface_fire_spotting_config:
-            critical_fireline_intensity_mapping = surface_fire_spotting_config.get("critical_fireline_intensity")
+    spot_config = inputs.get("spotting")
+    if spot_config:
+        surface_fire_spot_config = spot_config.get("surface_fire_spotting")
+        if surface_fire_spot_config:
+            critical_fireline_intensity_mapping = surface_fire_spot_config.get("critical_fireline_intensity")
             critical_fireline_intensity         = (intranges_mapping_lookup(critical_fireline_intensity_mapping,
                                                                             fuel_model_number)
                                                    or 0.0)
             if fireline_intensity > critical_fireline_intensity:
-                spotting_percent_mapping = surface_fire_spotting_config.get("surface_fire_spotting_percent")
+                spotting_percent_mapping = surface_fire_spot_config.get("surface_fire_spotting_percent")
                 spotting_percent         = intranges_mapping_lookup(spotting_percent_mapping, fuel_model_number) or 0.0
                 rand_gen                 = inputs["rand_gen"]
                 return rand_gen.uniform(0.0, 1.0) <= spotting_percent
@@ -7905,9 +7905,9 @@ def is_crown_spot_fire(inputs):
     Determine whether crowning causes spot fires. Config key `spotting` should
     take either a vector of probabilities (0-1) or a single spotting probability.
     """
-    spotting_config = inputs.get("spotting")
-    if spotting_config:
-        spotting_percent = spotting_config.get("crown_fire_spotting_percent")
+    spot_config = inputs.get("spotting")
+    if spot_config:
+        spotting_percent = spot_config.get("crown_fire_spotting_percent")
         if spotting_percent:
             rand_gen = inputs["rand_gen"]
             return rand_gen.uniform(0.0, 1.0) <= spotting_percent
@@ -8272,7 +8272,7 @@ def cast_firebrand(rand_gen,
 
 
 def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_time_coordinate,
-                      rand_gen, expected_ember_count, spotting_config):
+                      rand_gen, expected_ember_count, spot_config):
     """
     Given these inputs:
     - space_time_cubes          :: dictionary of (Lazy)SpaceTimeCube objects with these cell types
@@ -8294,7 +8294,7 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
     - space_time_coordinate     :: (t,y,x) coordinate in which the source cell burns
     - rand_gen                  :: numpy.random.Generator
     - expected_ember_count      :: expected number of firebrands to cast
-    - spotting_config           :: dictionary of spotting parameters
+    - spot_config               :: dictionary of spotting parameters
       - mean_distance                 :: ? TODO: Record these parameters' types
       - flin_exp                      :: ?
       - ws_exp                        :: ?
@@ -8331,7 +8331,7 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
         (_, rows, cols)              = fuel_model_cube.shape
         (_, cell_height, cell_width) = cube_resolution
         (t, y, x)                    = space_time_coordinate
-        decay_constant               = spotting_config["decay_constant"]
+        decay_constant               = spot_config["decay_constant"]
         upwind_direction             = space_time_cubes["upwind_direction"].get(t,y,x)
         downwind_direction           = radians(conv.opposite_direction(upwind_direction))
         cos_wdir                     = cos(downwind_direction)
@@ -8340,8 +8340,8 @@ def spread_firebrands(space_time_cubes, output_matrices, cube_resolution, space_
         wind_speed_10m               = space_time_cubes["wind_speed_10m"].get(t,y,x)          # km/hr
         wind_speed_20ft              = conv.wind_speed_10m_to_wind_speed_20ft(wind_speed_10m) # km/hr
         wind_speed_20ft_mps          = conv.km_hr_to_mps(wind_speed_20ft)                     # m/s
-        sample_delta_y_fn            = delta_y_sampler(spotting_config, fireline_intensity, wind_speed_20ft_mps)
-        sample_delta_x_fn            = delta_x_sampler(spotting_config, fireline_intensity, wind_speed_20ft_mps)
+        sample_delta_y_fn            = delta_y_sampler(spot_config, fireline_intensity, wind_speed_20ft_mps)
+        sample_delta_x_fn            = delta_x_sampler(spot_config, fireline_intensity, wind_speed_20ft_mps)
 
         #=======================================================================================
         # Cast each firebrand, update firebrand_count_matrix, and accumulate any ignited cells
